# phenolint

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: phenolint.toml
phenolint_marcos/: Cargo.toml
phenolint_marcos/src/: doc_string.rs  lib.rs  utils.rs
src/: blackboard.rs  enums.rs  error.rs  lib.rs  linter_context.rs  linter_policy.rs  linting_policy.rs  linting_report.rs  main.rs  materializer.rs  patcher.rs  phenolint.rs  phenolinter.rs  phenopacket_linter.rs  router.rs  supplier.rs  test_utils.rs  traits.rs  transformer.rs
src/config/: config_loader.rs  linter_config.rs  mod.rs
src/diagnostics/: enums.rs  error.rs  finding.rs  mod.rs  owned_report.rs  parser.rs  report.rs  specs.rs  violation.rs
src/helper/: mod.rs  non_empty_vec.rs
src/json/: error.rs  json_cursor.rs  json_editor.rs  mod.rs  phenopacket_cursor.rs  phenopacket_editor.rs  pointer.rs  utils.rs
src/new/: abstract_pheno_tree.rs  curie_format_patch.rs  deserializer.rs  json_traverser.rs  linter.rs  mod.rs  node.rs  parseable_nodes.rs  parser.rs  phenopacket_parser.rs  phenopacket_traverser_factory.rs  phenopacket_tree.rs  router.rs  span_types.rs  string_parser.rs  traits.rs  traverser_factory.rs  tree_factory.rs
src/new/patches/: curie_format_patch.rs  mod.rs  patch_registration.rs  patch_registry.rs
src/new/report/: curie_format_report.rs  (+3 more)
src/parsing/: mod.rs  parseable_nodes.rs  phenopacket_parser.rs  traits.rs  utils.rs
src/patches/: enums.rs  error.rs  mod.rs  patch.rs  patch_engine.rs  patch_registration.rs  patch_registry.rs  patcher.rs  traits.rs
src/report/: annotation_parser_spec.rs  enums.rs  error.rs  lint_finding.rs  lint_report.rs  lint_violation.rs  linting_report.rs  linting_report_info.rs  linting_violation.rs  mod.rs  parser.rs  renderer.rs  report_parser.rs  report_parser_spec.rs  report_registration.rs  report_registry.rs  snippet_parser_spec.rs  specs.rs  traits.rs
src/rules/: mod.rs  readme.md  resources.rs  rule_registration.rs  rule_registry.rs  traits.rs  utils.rs  utilss.rs
src/schema_validation/: validator.rs
src/tree/: abstract_pheno_tree.rs  mod.rs  node.rs  node_repository.rs  pointer.rs  span_types.rs  sql_node_repository.rs  traits.rs
tests/: test_curie_format_rule.rs  test_curies_have_resources_rule.rs  test_custom_rule.rs  test_disease_consistency_rule.rs  test_flexon.rs  test_registry.rs
tests/assets/: phenolint.toml  phenopacket.json
tests/common/: asserts.rs  assets.rs  construction.rs  mod.rs  paths.rs  test_functions.rs
(+43 files in other folders)
