[package]
authors = ["Rouven Reuter"]
description = "A Linter implementation for Phenopackets"
edition = "2024"
homepage = "https://robinsongroup.github.io/"
license = "MIT"
name = "phenolint"
version = "0.1.0"

[dependencies]
phenopackets = { version = "0.2.2-post2", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34+deprecated"
json-patch = "4.1.0"
json-spanned-value = "0.2.2"
jsonschema = "0.37.1"
saphyr = "0.0.6"
ontolius = "0.7.0"
regex = "1.12.2"
config = "0.15.18"
thiserror = "2.0.17"
inventory = "0.3.21"
phenolint-macros = { path = "./phenolint_marcos" }
once_cell = "1.21.3"
log = "0.4.28"
codespan-reporting = "0.13.1"
prost = "0.14.0"# Can't change because of phenopackets crate
rusqlite = "0.37.0"
bincode = "1.3"

[dev-dependencies]
rstest = "0.26.1"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
gag = "1.0.0"
prost-types = "0.14.1"
serial_test = "3.2.0"